# Safe-Home

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/game/: car-runner.js  profile.js  shop-data.js
