[package]
name = "skjermtid"
version = "0.1.0"
description = "Egen skjermtid-app med samme funksjoner som Family Safety, i eget design"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
